--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Charifit</title>
+    <title>LMS</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="img/lmslogo/lms_favicon-32x32.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -42,17 +42,17 @@
                         <div class="col-xl-6 col-md-12 col-lg-8">
                             <div class="short_contact_list">
                                 <ul>
-                                    <li><a href="#"> <i class="fa fa-phone"></i> +1 (454) 556-5656</a></li>
-                                    <li><a href="#"> <i class="fa fa-envelope"></i>Yourmail@gmail.com</a></li>
+                                    <li><a href="#"> <i class="fa fa-phone"></i> +91-9886479773</a></li>
+                                    <li><a href="#"> <i class="fa fa-envelope"></i>lmsngo86@gmail.com</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-xl-6 col-md-6 col-lg-4">
                             <div class="social_media_links d-none d-lg-block">
-                                <a href="#">
+                                <a href="https://www.facebook.com/people/L-M-S-Charitable-Trust/100083359567841/?mibextid=ZbWKwL">
                                     <i class="fa fa-facebook"></i>
                                 </a>
-                                <a href="#">
+                                <!-- <a href="#">
                                     <i class="fa fa-pinterest-p"></i>
                                 </a>
                                 <a href="#">
@@ -60,7 +60,7 @@
                                 </a>
                                 <a href="#">
                                     <i class="fa fa-twitter"></i>
-                                </a>
+                                </a> -->
                             </div>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                         <div class="col-xl-3 col-lg-3">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img src="img/logo.png" alt="">
+                                    <img src="img/lmslogo/lms_logo_rm.png" alt="" style="width: 100px; height: 100px;">
                                 </a>
                             </div>
                         </div>
@@ -734,20 +734,7 @@
                 </div>
             </div>
         </div>
-        <div class="copy-right_text">
-            <div class="container">
-                <div class="row">
-                    <div class="bordered_1px "></div>
-                    <div class="col-xl-12">
-                        <p class="copy_right text-center">
-                            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
+       
     </footer>
     <!-- footer_end  -->
 
