updated the address

--- a/About.html
+++ b/About.html
@@ -606,63 +606,61 @@
           <div class="row">
             <div class="col-xl-4 col-md-6 col-lg-4">
               <div class="footer_widget">
-                <div class="footer_logo">
-                  <a href="#">
-                    <img src="img/footer_logo.png" alt="" />
-                  </a>
-                </div>
+                <h2>L M S Charitable trust</h2>
                 <p class="address_text">
-                  Lorem ipsum dolor sit amet, <br />
-                  consectetur adipiscing elit, sed do <br />
-                  eiusmod tempor incididunt ut labore.
+                  No. 50, Rajiv Gandhi Road, Near New Extension Bus Stop, KR
+                  Puram, Bangalore-3.
                 </p>
                 <div class="socail_links">
                   <ul>
                     <li>
-                      <a href="#">
+                      <a
+                        href="https://www.facebook.com/people/L-M-S-Charitable-Trust/100083359567841/?mibextid=ZbWKwL"
+                      >
                         <i class="ti-facebook"></i>
                       </a>
                     </li>
-                    <li>
-                      <a href="#">
-                        <i class="ti-twitter-alt"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="fa fa-dribbble"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#">
-                        <i class="fa fa-instagram"></i>
-                      </a>
-                    </li>
+                    <!-- <li>
+                                        <a href="#">
+                                            <i class="ti-twitter-alt"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-dribbble"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-instagram"></i>
+                                        </a>
+                                    </li> -->
                   </ul>
                 </div>
               </div>
             </div>
-            <div class="col-xl-2 col-md-6 col-lg-2">
-              <div class="footer_widget">
-                <h3 class="footer_title">Services</h3>
-                <ul class="links">
-                  <li><a href="#">Donate</a></li>
-                  <li><a href="#">Sponsor</a></li>
-                  <li><a href="#">Fundraise</a></li>
-                  <li><a href="#">Volunteer</a></li>
-                  <li><a href="#">Partner</a></li>
-                  <li><a href="#">Jobs</a></li>
-                </ul>
-              </div>
-            </div>
+            <!-- <div class="col-xl-2 col-md-6 col-lg-2">
+                        <div class="footer_widget">
+                            <h3 class="footer_title">
+                                Services
+                            </h3>
+                            <ul class="links">
+                                <li><a href="#">Donate</a></li>
+                                <li><a href="#">Sponsor</a></li>
+                                <li><a href="#">Fundraise</a></li>
+                                <li><a href="#">Volunteer</a></li>
+                                <li><a href="#">Partner</a></li>
+                                <li><a href="#">Jobs</a></li>
+                            </ul>
+                        </div>
+                    </div> -->
             <div class="col-xl-3 col-md-6 col-lg-3">
               <div class="footer_widget">
                 <h3 class="footer_title">Contacts</h3>
                 <div class="contacts">
                   <p>
-                    +2(305) 587-3407 <br />
-                    info@loveuscharity.com <br />
-                    Flat 20, Reynolds Neck, North Helenaville, FV77 8WS
+                    +91-9886479773 <br />
+                    lmsngo86@gmail.com <br />
                   </p>
                 </div>
               </div>
