--- a/Gallary.html
+++ b/Gallary.html
@@ -98,6 +98,7 @@
                   <nav>
                     <ul id="navigation">
                       <li><a href="index.html">home</a></li>
+                      <li><a href="Gallary.html">Gallary</a></li>
                       <li><a href="About.html">About</a></li>
                       <li>
                         <a href="#">blog <i class="ti-angle-down"></i></a>
@@ -106,13 +107,7 @@
                           <li><a href="single-blog.html">single-blog</a></li>
                         </ul>
                       </li>
-                      <li>
-                        <a href="#">pages <i class="ti-angle-down"></i></a>
-                        <ul class="submenu">
-                          <li><a href="elements.html">elements</a></li>
-                          <li><a href="Cause.html">Cause</a></li>
-                        </ul>
-                      </li>
+
                       <li><a href="contact.html">Contact</a></li>
                     </ul>
                   </nav>
@@ -134,7 +129,7 @@
     <!-- header-end -->
 
     <!-- bradcam_area_start  -->
-    <div
+    <!-- <div
       class="bradcam_area breadcam_bg overlay d-flex align-items-center justify-content-center"
     >
       <div class="container">
@@ -146,11 +141,11 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- bradcam_area_end  -->
 
     <!-- Board Member  Starts-->
-    <div class="our_volunteer_area section_padding">
+    <!-- <div class="our_volunteer_area section_padding">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
@@ -314,291 +309,27 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="our_volunteer_area section_padding"></div>
-    <!-- Board Member starts  -->
-
-    <!-- latest_activites_area_start  -->
-    <!-- <div class="latest_activites_area">
-        <div class=" video_bg_1 video_activite  d-flex align-items-center justify-content-center">
-            <a class="popup-video" href="https://www.youtube.com/watch?v=MG3jGHnBVQs">
-                <i class="flaticon-ui"></i>
-            </a>
-        </div>
-        <div class="container">
-            <div class="row justify-content-end">
-                <div class="col-lg-7">
-                    <div class="activites_info">
-                        <div class="section_title">
-                            <h3> <span>Watch Our Latest  </span><br>
-                                Activities</h3>
-                        </div>
-                        <p class="para_1">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do 
-                            eiusmod tempor incididunt  ut labore dolore magna aliqua. 
-                            enim minim veniam, quis nostrud exercitation.</p class="para_1">
-                        <p class="para_2">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do 
-                            eiusmod tempor incididunt  ut labore dolore magna aliqua. 
-                            enim minim veniam, quis nostrud exercitation. tempor 
-                            incididunt  ut labore dolore magna aliqua. enim minim 
-                            veniam, quis nostrud exercitation.</p>
-                        <a href="#" data-scroll-nav="1" class="boxed-btn4">Donate Now</a>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div> -->
-    <!-- latest_activites_area_end  -->
 
-    <!-- counter_area_start  -->
-    <div class="counter_area pt-120">
-      <div class="container">
-        <div class="counter_bg overlay">
-          <div class="row">
-            <div class="col-lg-3 col-md-6">
-              <div
-                class="single_counter d-flex align-items-center justify-content-center"
-              >
-                <div class="icon">
-                  <i class="flaticon-calendar"></i>
-                </div>
-                <div class="events">
-                  <h3 class="counter">120</h3>
-                  <p>Finished Event</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-              <div
-                class="single_counter d-flex align-items-center justify-content-center"
-              >
-                <div class="icon">
-                  <i class="flaticon-heart-beat"></i>
-                </div>
-                <div class="events">
-                  <h3 class="counter">120</h3>
-                  <p>Finished Event</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-              <div
-                class="single_counter d-flex align-items-center justify-content-center"
-              >
-                <div class="icon">
-                  <i class="flaticon-in-love"></i>
-                </div>
-                <div class="events">
-                  <h3 class="counter">120</h3>
-                  <p>Finished Event</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-              <div
-                class="single_counter d-flex align-items-center justify-content-center"
-              >
-                <div class="icon">
-                  <i class="flaticon-hug"></i>
-                </div>
-                <div class="events">
-                  <h3 class="counter">120</h3>
-                  <p>Finished Event</p>
-                </div>
-              </div>
-            </div>
-          </div>
+    <!-- Images shows -->
+    <div class="swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="img/about/1.jpg" alt="Image 1" />
+          <div class="swiper-slide-text">Image 1 Caption</div>
+        </div>
+        <div class="swiper-slide">
+          <img src="img/lmslogo/android-chrome-512x512.png" alt="Image 2" />
+          <div class="swiper-slide-text">Image 2 Caption</div>
+        </div>
+        <div class="swiper-slide">
+          <img src="img/lmslogo/lms_logo.jpg" alt="Image 3" />
         </div>
       </div>
     </div>
-    <!-- counter_area_end  -->
 
-    <!-- our_volunteer_area_start  -->
-    <div class="our_volunteer_area section_padding">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-6">
-            <div class="section_title text-center mb-55">
-              <h3><span>Our Volunteer</span></h3>
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-lg-4 col-md-6">
-            <div class="single_volenteer">
-              <div class="volenteer_thumb">
-                <img src="img/volenteer/1.png" alt="" />
-              </div>
-              <div class="voolenteer_info d-flex align-items-end">
-                <div class="social_links">
-                  <ul>
-                    <li>
-                      <a href="#"> <i class="fa fa-facebook"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-pinterest"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-linkedin"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-twitter"></i> </a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="info_inner">
-                  <h4>Sakil khan</h4>
-                  <p>Donner</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="single_volenteer">
-              <div class="volenteer_thumb">
-                <img src="img/volenteer/2.png" alt="" />
-              </div>
-              <div class="voolenteer_info d-flex align-items-end">
-                <div class="social_links">
-                  <ul>
-                    <li>
-                      <a href="#"> <i class="fa fa-facebook"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-pinterest"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-linkedin"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-twitter"></i> </a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="info_inner">
-                  <h4>Emran Ahmed</h4>
-                  <p>Volunteer</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="single_volenteer">
-              <div class="volenteer_thumb">
-                <img src="img/volenteer/3.png" alt="" />
-              </div>
-              <div class="voolenteer_info d-flex align-items-end">
-                <div class="social_links">
-                  <ul>
-                    <li>
-                      <a href="#"> <i class="fa fa-facebook"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-pinterest"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-linkedin"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-twitter"></i> </a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="info_inner">
-                  <h4>Sabbir Ahmed</h4>
-                  <p>Volunteer</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- our_volunteer_area_end  -->
-
-    <div data-scroll-index="1" class="make_donation_area section_padding">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-6">
-            <div class="section_title text-center mb-55">
-              <h3><span>Make a Donation</span></h3>
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-lg-6">
-            <form action="#" class="donation_form">
-              <div class="row align-items-center">
-                <div class="col-md-4">
-                  <div class="single_amount">
-                    <div class="input_field">
-                      <div class="input-group">
-                        <div class="input-group-prepend">
-                          <span class="input-group-text" id="basic-addon1"
-                            >$</span
-                          >
-                        </div>
-                        <input
-                          type="text"
-                          class="form-control"
-                          placeholder="40,200"
-                          aria-label="Username"
-                          aria-describedby="basic-addon1"
-                        />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-8">
-                  <div class="single_amount">
-                    <div
-                      class="fixed_donat d-flex align-items-center justify-content-between"
-                    >
-                      <div class="select_prise">
-                        <h4>Select Amount:</h4>
-                      </div>
-                      <div class="single_doonate">
-                        <input
-                          type="radio"
-                          id="blns_1"
-                          name="radio-group"
-                          checked
-                        />
-                        <label for="blns_1">10</label>
-                      </div>
-                      <div class="single_doonate">
-                        <input
-                          type="radio"
-                          id="blns_2"
-                          name="radio-group"
-                          checked
-                        />
-                        <label for="blns_2">30</label>
-                      </div>
-                      <div class="single_doonate">
-                        <input
-                          type="radio"
-                          id="Other"
-                          name="radio-group"
-                          checked
-                        />
-                        <label for="Other">Other</label>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12">
-            <div class="donate_now_btn text-center">
-              <a href="#" class="boxed-btn4">Donate Now</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <div class="swiper-button-prev">‹</div>
+    <div class="swiper-button-next">›</div>
 
     <!-- footer_start  -->
     <footer class="footer">
@@ -734,5 +465,47 @@
     <script src="js/mail-script.js"></script>
 
     <script src="js/main.js"></script>
+    <script>
+      const swiperWrapper = document.querySelector(".swiper-wrapper");
+      const slides = document.querySelectorAll(".swiper-slide");
+      const prevButton = document.querySelector(".swiper-button-prev");
+      const nextButton = document.querySelector(".swiper-button-next");
+      let currentIndex = 0;
+
+      function slideTo(index) {
+        const offset = -index * 100 + "%"; // Calculate offset based on index
+        swiperWrapper.style.transform = `translateX(${offset})`;
+        currentIndex = index;
+      }
+
+      prevButton.addEventListener("click", () => {
+        currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+        slideTo(currentIndex);
+      });
+
+      nextButton.addEventListener("click", () => {
+        currentIndex = (currentIndex + 1) % slides.length;
+        slideTo(currentIndex);
+      });
+
+      // Optional: Autoplay
+      let autoplayInterval;
+      function startAutoplay() {
+        autoplayInterval = setInterval(() => {
+          nextButton.click();
+        }, 3000); // Change interval as needed
+      }
+
+      function stopAutoplay() {
+        clearInterval(autoplayInterval);
+      }
+
+      // Start autoplay on page load
+      startAutoplay();
+
+      // Pause autoplay on hover
+      swiperContainer.addEventListener("mouseover", stopAutoplay);
+      swiperContainer.addEventListener("mouseout", startAutoplay);
+    </script>
   </body>
 </html>
