--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                   <nav>
                     <ul id="navigation">
                       <li><a href="index.html">home</a></li>
+                      <li><a href="Gallary.html">Gallary</a></li>
                       <li><a href="About.html">About</a></li>
                       <li>
                         <a href="#">blog <i class="ti-angle-down"></i></a>
@@ -110,13 +111,13 @@
                           <li><a href="single-blog.html">single-blog</a></li>
                         </ul>
                       </li>
-                      <li>
+                      <!-- <li>
                         <a href="#">pages <i class="ti-angle-down"></i></a>
                         <ul class="submenu">
                           <li><a href="elements.html">elements</a></li>
                           <li><a href="Cause.html">Cause</a></li>
                         </ul>
-                      </li>
+                      </li> -->
                       <li><a href="contact.html">Contact</a></li>
                     </ul>
                   </nav>
