updated latest design

--- a/Gallary.html
+++ b/Gallary.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Charifit</title>
+    <title>LMS</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="img/lmslogo/lms_favicon-32x32.png"
+    />
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -23,19 +27,17 @@
     <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/slicknav.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <!-- <link rel="stylesheet" href="css/responsive.css"> -->
+     <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
+  <script src="js/owl.carousel.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   </head>
 
   <body>
-    <!--[if lte IE 9]>
-      <p class="browserupgrade">
-        You are using an <strong>outdated</strong> browser. Please
-        <a href="https://browsehappy.com/">upgrade your browser</a> to improve
-        your experience and security.
-      </p>
-    <![endif]-->
-
-    <!-- header-start -->
+   
     <header>
       <div class="header-area">
         <div class="header-top_area">
@@ -98,15 +100,15 @@
                   <nav>
                     <ul id="navigation">
                       <li><a href="index.html">home</a></li>
-                      <li><a href="Gallary.html">Gallary</a></li>
+                      <li><a href="Gallary.html">Gallery</a></li>
                       <li><a href="About.html">About</a></li>
-                      <li>
+                      <!-- <li>
                         <a href="#">blog <i class="ti-angle-down"></i></a>
                         <ul class="submenu">
                           <li><a href="blog.html">blog</a></li>
                           <li><a href="single-blog.html">single-blog</a></li>
                         </ul>
-                      </li>
+                      </li> -->
 
                       <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -126,211 +128,131 @@
         </div>
       </div>
     </header>
-    <!-- header-end -->
-
-    <!-- bradcam_area_start  -->
-    <!-- <div
-      class="bradcam_area breadcam_bg overlay d-flex align-items-center justify-content-center"
+         <div
+      class="bradcam_area2 breadcam_bg overlay d-flex align-items-center justify-content-center"
     >
       <div class="container">
         <div class="row">
           <div class="col-xl-12">
             <div class="bradcam_text text-center">
-              <h3>About US</h3>
             </div>
           </div>
-        </div>
-      </div>
-    </div> -->
-    <!-- bradcam_area_end  -->
-
-    <!-- Board Member  Starts-->
-    <!-- <div class="our_volunteer_area section_padding">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-6">
-            <div class="section_title text-center mb-55">
-              <h3><span>Board Members</span></h3>
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-lg-4 col-md-6">
-            <div class="single_volenteer">
-              <div class="volenteer_thumb">
-                <img src="img/members/anita.jpg" alt="" />
-              </div>
-              <div class="voolenteer_info d-flex align-items-end">
-                <div class="social_links">
-                  <ul>
-                    <li>
-                      <a href="https://www.facebook.com/anitha.anithakn.7">
-                        <i class="fa fa-facebook"></i>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-pinterest"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-linkedin"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-twitter"></i> </a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="info_inner">
-                  <h4>Dr. Anita K N</h4>
-                  <p>President</p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6">
-            <div class="single_volenteer">
-              <div class="volenteer_thumb">
-                <img src="img/members/Sampath_TD.jpeg" alt="" />
-              </div>
-              <div class="voolenteer_info d-flex align-items-end">
-                <div class="social_links">
-                  <ul>
-                    <li>
-                      <a href="#"> <i class="fa fa-facebook"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-pinterest"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-linkedin"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-twitter"></i> </a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="info_inner">
-                  <h4>Sampath T D</h4>
-                  <p>Secretary</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="single_volenteer">
-              <div class="volenteer_thumb">
-                <img src="img/members/Manjunath.jpeg" alt="" />
-              </div>
-              <div class="voolenteer_info d-flex align-items-end">
-                <div class="social_links">
-                  <ul>
-                    <li>
-                      <a href="#"> <i class="fa fa-facebook"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-pinterest"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-linkedin"></i> </a>
-                    </li>
-                    <li>
-                      <a href="#"> <i class="fa fa-twitter"></i> </a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="info_inner">
-                  <h4>Manjunath M N</h4>
-                  <p>Treasurer</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="pt-50">
-          <div class="row justify-content-center">
-            <div class="col-lg-4 col-md-6">
-              <div class="single_volenteer">
-                <div class="volenteer_thumb">
-                  <img src="img/members/Suresh.jpeg" alt="" />
-                </div>
-                <div class="voolenteer_info d-flex align-items-end">
-                  <div class="social_links">
-                    <ul>
-                      <li>
-                        <a href="#"> <i class="fa fa-facebook"></i> </a>
-                      </li>
-                      <li>
-                        <a href="#"> <i class="fa fa-pinterest"></i> </a>
-                      </li>
-                      <li>
-                        <a href="#"> <i class="fa fa-linkedin"></i> </a>
-                      </li>
-                      <li>
-                        <a href="#"> <i class="fa fa-twitter"></i> </a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="info_inner">
-                    <h4>Suresh</h4>
-                    <p>Director</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-              <div class="single_volenteer">
-                <div class="volenteer_thumb">
-                  <img src="img/members/Ravichandir.jpeg" alt="" />
-                </div>
-                <div class="voolenteer_info d-flex align-items-end">
-                  <div class="social_links">
-                    <ul>
-                      <li>
-                        <a href="#"> <i class="fa fa-facebook"></i> </a>
-                      </li>
-                      <li>
-                        <a href="#"> <i class="fa fa-pinterest"></i> </a>
-                      </li>
-                      <li>
-                        <a href="#"> <i class="fa fa-linkedin"></i> </a>
-                      </li>
-                      <li>
-                        <a href="#"> <i class="fa fa-twitter"></i> </a>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="info_inner">
-                    <h4>Ravichandir</h4>
-                    <p>Director</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
-    <!-- Images shows -->
-    <div class="swiper-container">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <img src="img/about/1.jpg" alt="Image 1" />
-          <div class="swiper-slide-text">Image 1 Caption</div>
-        </div>
-        <div class="swiper-slide">
-          <img src="img/lmslogo/android-chrome-512x512.png" alt="Image 2" />
-          <div class="swiper-slide-text">Image 2 Caption</div>
-        </div>
-        <div class="swiper-slide">
-          <img src="img/lmslogo/lms_logo.jpg" alt="Image 3" />
         </div>
       </div>
     </div>
 
-    <div class="swiper-button-prev">‹</div>
-    <div class="swiper-button-next">›</div>
-
+    <!-- Images shows -->
+     <div class="section_padding">
+  <div class="gallery-container">
+  <div class="owl-carousel owl-theme">
+    <div class="item">
+        <a href="img/gallary/1.jpg" class="image-popup">
+           <img src="img/gallary/1.jpg" alt="Image 1" class="gallery-image" />
+          </a>
+     
+    </div>
+      <div class="item">
+        <a href="img/gallary/7.jpg" class="image-popup">
+           <img src="img/gallary/7.jpg" alt="Image 1" class="gallery-image" />
+          </a>
+    </div>
+    <div class="item">
+        <a href="img/gallary/b.jpg" class="image-popup">
+           <img src="img/gallary/b.jpg" alt="Image 1" class="gallery-image" />
+          </a>
+    </div>
+    <div class="item">
+        <a href="img/gallary/3.jpg" class="image-popup">
+           <img src="img/gallary/3.jpg" alt="Image 1" class="gallery-image" />
+          </a>
+     
+    </div>
+    <div class="item">
+        <a href="img/gallary/4.jpg" class="image-popup">
+           <img src="img/gallary/4.jpg" alt="Image 1" class="gallery-image" />
+          </a>
+    </div>
+       <div class="item">
+        <a href="img/gallary/5.jpg" class="image-popup">
+           <img src="img/gallary/5.jpg" alt="Image 1" class="gallery-image" />
+          </a>
+    </div>
+    <div class="item">
+        <a href="img/gallary/6.jpg" class="image-popup">
+           <img src="img/gallary/6.jpg" alt="Image 1" class="gallery-image" />
+          </a>
+    </div>
+    <div class="item">
+        <a href="img/gallary/8.jpg" class="image-popup">
+           <img src="img/gallary/8.jpg" alt="Image 1" class="gallery-image" />
+          </a>
+    </div>
+     <div class="item">
+        <a href="img/gallary/9.jpg" class="image-popup">
+           <img src="img/gallary/9.jpg" alt="Image 1" class="gallery-image" />
+          </a>
+    </div>
+      <div class="item">
+        <a href="img/gallary/a.jpg" class="image-popup">
+           <img src="img/gallary/a.jpg" alt="Image 1" class="gallery-image" />
+          </a>
+    </div>
+       <div class="item">
+        <a href="img/gallary/c.jpg" class="image-popup">
+           <img src="img/gallary/c.jpg" alt="Image 1" class="gallery-image" />
+          </a>
+    </div>
+     <div class="item">
+        <a href="img/gallary/d.jpg" class="image-popup">
+           <img src="img/gallary/d.jpg" alt="Image 1" class="gallery-image" />
+          </a>
+    </div>
+    <div class="item">
+        <a href="img/gallary/e.jpg" class="image-popup">
+           <img src="img/gallary/e.jpg" alt="Image 1" class="gallery-image" />
+          </a>
+    </div>
+     <div class="item">
+        <a href="img/gallary/g.jpg" class="image-popup">
+           <img src="img/gallary/g.jpg" alt="Image 1" class="gallery-image" />
+          </a>
+    </div>
+    <div class="item">
+        <a href="img/gallary/h.jpg" class="image-popup">
+           <img src="img/gallary/h.jpg" alt="Image 1" class="gallery-image" />
+          </a>
+    </div>
+  </div>
+</div>
+     </div>
+  <div data-scroll-index="1" class="make_donation_area section_padding">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-6">
+            <div class="section_title text-center mb-55">
+              <h3><span>Make a Donation</span></h3>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-lg-6">
+            <p>
+              Make a generous donation to help us reach more beneficiaries.
+              <br />
+              <strong>Account Number:</strong> 920020033452190
+              <br />
+              <strong>Bank: </strong> Axis Bank
+              <br />
+              <strong>Branch: </strong> MG Road
+              <br />
+              <strong>IFSC Code: </strong>UTIB0000009
+              <hr/>
+             <i> All donations are eligible for tax savings under 80G.</i>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- footer_start  -->
     <footer class="footer">
       <div class="footer_top">
@@ -397,7 +319,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-3 col-md-6 col-lg-3">
+            <!-- <div class="col-xl-3 col-md-6 col-lg-3">
               <div class="footer_widget">
                 <h3 class="footer_title">Top News</h3>
                 <ul class="news_links">
@@ -429,7 +351,7 @@
                   </li>
                 </ul>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -437,7 +359,18 @@
     <!-- footer_end  -->
 
     <!-- link that opens popup -->
+<style>
+  .owl-carousel .item {
+    height: 600px; /* Set the desired height */
+  }
 
+  .gallery-image {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: cover; /* Ensures the image covers the div without distortion */
+  }
+</style>
     <!-- JS here -->
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
@@ -465,47 +398,39 @@
     <script src="js/mail-script.js"></script>
 
     <script src="js/main.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="js/jquery.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/main.js"></script>
     <script>
-      const swiperWrapper = document.querySelector(".swiper-wrapper");
-      const slides = document.querySelectorAll(".swiper-slide");
-      const prevButton = document.querySelector(".swiper-button-prev");
-      const nextButton = document.querySelector(".swiper-button-next");
-      let currentIndex = 0;
-
-      function slideTo(index) {
-        const offset = -index * 100 + "%"; // Calculate offset based on index
-        swiperWrapper.style.transform = `translateX(${offset})`;
-        currentIndex = index;
+      $(document).ready(function() {
+  $('.image-popup').magnificPopup({
+    type: 'image',
+    gallery: {
+      enabled: true
+    }
+  });
+});
+    $(document).ready(function(){
+    $(".owl-carousel").owlCarousel({
+      items: 1,
+      loop: true,
+      autoplay: true,
+      autoplayTimeout: 3000,
+      responsive: {
+        0: {
+          items: 1
+        },
+        600: {
+          items: 1
+        },
+        1000: {
+          items: 1
+        }
       }
-
-      prevButton.addEventListener("click", () => {
-        currentIndex = (currentIndex - 1 + slides.length) % slides.length;
-        slideTo(currentIndex);
-      });
-
-      nextButton.addEventListener("click", () => {
-        currentIndex = (currentIndex + 1) % slides.length;
-        slideTo(currentIndex);
-      });
-
-      // Optional: Autoplay
-      let autoplayInterval;
-      function startAutoplay() {
-        autoplayInterval = setInterval(() => {
-          nextButton.click();
-        }, 3000); // Change interval as needed
-      }
-
-      function stopAutoplay() {
-        clearInterval(autoplayInterval);
-      }
-
-      // Start autoplay on page load
-      startAutoplay();
-
-      // Pause autoplay on hover
-      swiperContainer.addEventListener("mouseover", stopAutoplay);
-      swiperContainer.addEventListener("mouseout", startAutoplay);
+    });
+  });
     </script>
   </body>
 </html>
