--- a/index.html
+++ b/index.html
@@ -162,7 +162,42 @@
       </div>
     </div>
     <!-- slider_area_end -->
+     <!-- Event_area_start  -->  <div class="our_volunteer_area section_padding">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-6">
+            <div class="section_title text-center mb-55">
+              <h3><span>Our Certification</span></h3>
+            </div>
+          </div>
+        </div>
+      
+       <div class="row ">
+  <div class="col-lg-12">
+    <div class="owl-carousel owl-theme">
+      <div class="single_volenteer">
+        <div class="volenteer_thumb">
+           <a href="img/events/event1.png" class="image-popup"> 
+          <img src="img/events/event1.png" alt="" class="fixed-size2"/>
+          </a>
 
+        </div>
+      </div>
+      <div class="single_volenteer">
+        <div class="volenteer_thumb">
+             <a href="img/events/swing.jpg" class="image-popup">
+          <img src="img/events/swing.jpg" alt="" class="fixed-size2"/>
+          </a>
+        </div>
+      </div>
+    
+   
+      <!-- Add more items as needed -->
+    </div>
+  </div>
+  </div>
+</div>
+        </div>
     <!-- reson_area_start  -->
     <div class="reson_area section_padding">
       <div class="container">
