--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <div class="section_title text-center mb-55">
-              <h3><span>Our Certification</span></h3>
+              <h3><span>Current Events</span></h3>
             </div>
           </div>
         </div>
